﻿[B]Changelog[/B]
* Fixed: Vier & Vijf.be had no videos (Fixes #992)

[I]Previous Changes[/I]
* Fixed: VRT.nu changed site layout again.... (Fixes #984)
* Added: Subs for VRT.nu if the Adaptive Add-on is not used.
* Fixed: VRT.nu 'remix-aka' streams (See #981)
* Fixed: Stievie and VTM Live streams. These require Kodi Leia or higher (Fixes #981)
* Fixed: VRT.nu changed site layout (Fixes #974)
* Added: Sporza Live stream (See #955)
* Fixed: Canvas & KetNet live streams (Fixes #955)
* Fixed: Een live streams (See #955)
* Updated: VTM/Q2/Stievie can use Adaptive Streaming for live items (See #953)
* Fixed: Stieve, VTM and Q2 listings and playback (Fixes #953)
* Fixed: VTM.be broke due to cookie wall (Fixes #953)
* Fixed: added paging to Vier.be (Fixes #940)
* Fixed: VTM and Q2 listing (Fixes #939)
* Fixed: Vier.be 'big'-teaser-card videos were not parsed (Fixes #925)
* Fixed: Some VTM streams would not play (Fixes #924)
* Fixed: Stievie.be (requires Kodi 18.x) (See #917)
* Fixed: VRT.nu updated the site again (Fixes #898)
* Fixed: VRT.nu updated the site (Fixes #898)
* Fixed: VRT.nu was missing those shows without a channel logo (Fixes #894)
* Fixed: Vier/vijf.be were missing some videos that appeared as highlighted on the pages (Fixes #892)
* Removed: all Stievie.be videos as they moved to encrypted DASH which is not supported by Kodi (See #878)
* Fixed: Vier/Vijf.be moved to new API and requires logging in (Fixes #888)
* Fixed: vrt.nu live streams were broken (Fixes #884)
* Fixed: no audio on VRT.nu streams (Fixes #880)
* Fixed: VRT.nu streams moved to Vualto plaform (Fixes #865)
* Fixed: KetNet listing broke (Fixes #866)
* Added: Stievie.be (Fixes #763)
* Added: Recent items to VTM (Fixes #827)
* Fixed: Some streams would start in the middle of a stream (Reverted #854) as it seems to be OK now
* Fixed: Paging for VTM would not work (only Q2)
* Fixed: VTM.be do no longer accept an empty range= header (Fixes #854)